--- a/Drunken/Drunken/Drunken/Info.plist
+++ b/Drunken/Drunken/Drunken/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Support File/Font/Lazydog.ttf</string>
+		<string>Lazydog.ttf</string>
 	</array>
 	<key>SKAdNetworkItems</key>
 	<array>
